example/lib/src/l10n/errors/app_pt.arb
{
  "@@locale": "pt",
  "error": "Ocorreu um erro",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Ocorreu um erro inesperado",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Relatório de bug enviado com sucesso.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}